# ray_tracer

./: Cargo.toml  README.md  cornell_box.json
examples/: construct_army.rs  construct_christmas.rs  construct_cornell.rs  construct_lucy.rs  construct_outside.rs  construct_santa.rs  render_cornell_box.rs  render_scene.rs  test_bvh.rs  test_bvh_egui.rs
examples/commun/: input_manager.rs  mod.rs
render_scene/: Cargo.toml
render_scene/src/: main.rs
src/: BVH.rs  bvhs.rs  camera.rs  colliders.rs  commun_types.rs  hitable.rs  hitables.rs  image.rs  lib.rs  material.rs  math.rs  optical.rs  parallel.rs  processed_scene.rs  ray.rs  ray_tracer.rs  render_target.rs  scene.rs  shapes.rs
