[package]
name = "ray_tracer"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 1

[dependencies]
nalgebra = "0.33.1"
rand = "0.8.5"
tobj = "4.0.2"
image = "0.25.4"

[dev-dependencies]
show-image = "0.14.0"
show-image-macros = "0.12.3"

eframe = {version = "0.29.1", features = [
    "default",
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }

# For image support:
egui_extras = { version = "0.29.1", features = ["default", "image"] }
egui_plot = "0.29.0"

env_logger = { version = "0.11.5", default-features = false, features = [
    "auto-color",
    "humantime",
] }