[workspace]
members = [".", "render_scene"]

[package]
name = "ray-tracer"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 1

[dependencies]
nalgebra = { version="0.33", features = ["serde-serialize"] }
rand = "0.8"
tobj = "4.0"
image = "0.25.5"

serde = {version="1.0.215", features = ["derive"]}
serde_json = "1.0.133"
typetag = "0.2"

itertools = "0.13.0"

num_cpus = "1.16.0"

[dev-dependencies]
show-image = "0.14.0"
show-image-macros = "0.12.3"

eframe = {version = "0.29.1", features = [
    "default",
    "__screenshot",
] }

# For image support:
egui_extras = { version = "0.29.1", features = ["default", "image"] }
egui_plot = "0.29.0"

env_logger = { version = "0.11.5", default-features = false, features = [
    "auto-color",
    "humantime",
] }