[package]
name = "render_scene"
version = "0.1.0"
edition = "2021"

[dependencies]
ray-tracer = {path = "../"}

show-image = "0.14.0"
show-image-macros = "0.12.3"

eframe = {version = "0.29.1", features = [
    "default",
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }

# For image support:
egui_extras = { version = "0.29.1", features = ["default", "image"] }
egui_plot = "0.29.0"

env_logger = { version = "0.11.5", default-features = false, features = [
    "auto-color",
    "humantime",
] }